Changes to images

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,25 @@
 body {
     text-align: center;
 }
+
 #message {
-	display:none;
+    display: none;
     font-family: "Cookie", cursive;
     color: #bd7635;
-    font-size: 25px;    
+    font-size: 25px;
 }
-.modal
-{
-	height:100%;
-	width:100%;
+
+.modal {
+    height: 100%;
+    max-width: 100%;
 }
+
 .modal ul {
-	text-align: start;
+    text-align: start;
+}
+
+#arrowImage,
+#wonImage,
+.modal-footer {
+    margin: 0px auto;
 }
